--- a/scss/comments.scss
+++ b/scss/comments.scss
@@ -48,14 +48,14 @@ $lighter-grey: lighten($black, 45%);
 
 .main {
     width: 30rem;
-    margin: 15px auto;
+    margin: 25px auto;
     background: $white;
 
 }
 
 .comment {
-    min-height: 100px;
-    padding: 1rem;
+    min-height: 90px;
+    padding: 0.7rem;
     p {
         @include whitney-book;
         line-height: 1.5em;
@@ -71,6 +71,7 @@ $lighter-grey: lighten($black, 45%);
     max-width: 25rem;
     width: 100%;
     margin: 0 auto;
+    padding: 10px;
 }
 
 textarea {
