--- a/css/comments.css
+++ b/css/comments.css
@@ -38,3 +38,71 @@ button {
 
 * {
   box-sizing: border-box; }
+
+.login h3 {
+  font-family: 'Archer A', 'Archer B';
+  font-weight: 500;
+  font-style: normal;
+  color: #222222;
+  text-align: center;
+  font-size: 1.6154rem; }
+
+.login .twitter, .login .facebook {
+  font-family: 'Archer A', 'Archer B';
+  font-weight: 500;
+  font-style: normal;
+  width: 21rem;
+  color: #f8f8f8;
+  background: grey;
+  font-size: 1.6154rem;
+  margin: 1rem auto;
+  border: 1px solid #959595;
+  border-radius: 2px; }
+  .login .twitter i, .login .facebook i {
+    padding: 1rem 1rem 1rem 1rem; }
+  .login .twitter span, .login .facebook span {
+    padding-left: 1rem;
+    padding-right: 1rem; }
+  .login .twitter i, .login .twitter span, .login .facebook i, .login .facebook span {
+    display: inline-block; }
+  .login .twitter:hover, .login .facebook:hover {
+    cursor: pointer;
+    border: 1px solid #626262; }
+
+.login .twitter {
+  background: #519be4; }
+  .login .twitter i {
+    background: #4988c9; }
+
+.login .facebook {
+  background: #314b82; }
+  .login .facebook i {
+    background: #2a406e; }
+
+.login-required {
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Archer A', 'Archer B';
+  font-weight: 800;
+  font-style: normal;
+  font-size: 1rem;
+  color: #222222;
+  border: 1px solid #76b8d8;
+  border-radius: 2px; }
+
+.pending {
+  text-align: center;
+  font-family: 'Archer A', 'Archer B';
+  font-weight: 800;
+  font-style: normal;
+  font-size: 1.6154rem;
+  padding: .5rem;
+  background: #d9ebf4;
+  border: 1px solid #959595; }
+  .pending a {
+    color: #2f2f2f; }
+
+ul {
+  list-style: none; }
