add read-me; still with bugs in ngAnimate and testing

--- a/css/comments.css
+++ b/css/comments.css
@@ -106,3 +106,16 @@ button {
 
 ul {
   list-style: none; }
+
+/* animations -------*/
+.comment.ng-enter {
+  animation: fadeIn 0.5s linear; }
+
+.main-view.ng-enter {
+  animation: fadeIn 0.5s linear; }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
