--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,5 +1,5 @@
 <div>
-  <ul class="comment" ng-repeat="comment in loaded"
+  <ul class="comment animated" ng-repeat="comment in loaded"
   karma
   voter="UserAuth.user"
   poster="comment.user"
