--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,12 @@
-<article>
-  Cool here I am
-</article>
-<comments></comments>
+<div class="post">
+  <article>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius ex lobortis dapibus consectetur. Pellentesque eleifend, lorem sed maximus elementum, diam magna venenatis tellus, ut eleifend leo massa id dolor. Donec non eros elit. Proin imperdiet, libero nec mattis aliquet, lorem lorem gravida justo, a tristique erat sem sit amet lorem. Vestibulum rhoncus vehicula est, nec dapibus ante rhoncus id. Nulla pharetra blandit molestie. Nunc vel ligula ac magna congue consectetur. Curabitur eu mauris ipsum. Quisque pellentesque velit quis interdum sodales. Cras in dictum mauris, at hendrerit augue. Quisque et suscipit justo. Nulla molestie tempor arcu, in pulvinar lacus commodo placerat. Nulla iaculis ornare leo, eu sagittis elit mollis at. Mauris dapibus massa nec auctor luctus. Etiam dapibus laoreet felis vitae varius.
+    </p>
+    <p>
+      Quisque vulputate tristique sapien et faucibus. Phasellus aliquet augue ex, ut facilisis ex tempor nec. Maecenas velit metus, gravida vel tellus ut, semper viverra ligula. Vestibulum pulvinar sem vitae odio tempor pulvinar. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer commodo justo nisi, at tempor tellus rutrum a. Suspendisse potenti. In sit amet consectetur ex. Nulla facilisi. Phasellus vitae ipsum dictum, vulputate nulla eu, eleifend est.
+    </p>
+    
+  </article>
+  <comments></comments>
+</div>
